# ansible-role-tripleo-parts

./: .gitignore  README.md  setup.cfg
defaults/: main.yml
handlers/: main.yml
tasks/: main.yml
tests/: test.yml
vars/: main.yml
