[metadata]
name = ansible-role-tripleo-parts
summary = ansible-role-tripleo-parts
description-file =
    README.md
author = RDO-CI Team
author-email = myoung@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-parts
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/parts = ../ansible-role-tripleo-parts/parts/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
